Bugfix: Mouse up/down visibility of 3 pages' passwords, fixed login policy, fixed login title, create account button styles

--- a/src/mainClient/mainpage/MainPage.css
+++ b/src/mainClient/mainpage/MainPage.css
@@ -249,6 +249,10 @@ p.register-link {
     cursor: pointer;
 }
 
+.register-link a {
+    text-decoration-line: none;
+}
+
 .back_login {
     text-decoration: none;
     color: white;
